--- a/app/src/main/res/layout/activity_step2.xml
+++ b/app/src/main/res/layout/activity_step2.xml
@@ -19,28 +19,29 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/leftArrowButtonImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="25dp"
-            android:layout_marginEnd="15dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            android:onClick="goBack"/>
 
-        <ImageView
-            android:id="@+id/rightArrowButtonImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="25dp"
-            android:layout_marginEnd="15dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            android:src="@drawable/ic_baseline_arrow_forward_24"
-            android:onClick="goForward"/>
+            <ImageView
+                android:id="@+id/leftArrowButtonImageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="25dp"
+                android:onClick="goBack"
+                android:src="@drawable/ic_baseline_arrow_back_24" />
+
+            <ImageView
+                android:id="@+id/rightArrowButtonImageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="right"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="25dp"
+                android:onClick="goForward"
+                android:src="@drawable/ic_baseline_arrow_forward_24" />
 
 
 
