--- a/app/src/main/res/layout/activity_final_exchange.xml
+++ b/app/src/main/res/layout/activity_final_exchange.xml
@@ -19,7 +19,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor">
+    android:background="@color/background">
 
     <RelativeLayout
         android:id="@+id/mainLayout"
